# auto_job

./: CMakeLists.txt  README.md  auto_job.control  build.sh
sql/: auto_job--1.0.0.sql
src/: init.c  job.c  job.h  launcher.c  launcher.h
test/: test_job.sql
